# employee-linhlt

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  README_EN.md  YOUR_WORKING_COMMAND.md  create_tables.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run.py  run_tests.py  test_api.py
app/: main.py
app/api/: routes.py
app/api/endpoints/: async_employees.py  employees.py  monitoring.py
app/core/: config.py  containers.py  deps.py  hybrid_rate_limiter.py  middleware.py  organization_config.py  rate_limiter.py  redis_client.py  security_middleware.py
app/db/: async_session.py  init_db.py  init_script.py  session.py
app/models/: __init__.py  base.py  employee.py
app/repositories/: async_employee.py  base.py  employee.py
app/schemas/: __init__.py  employee.py  token.py
app/services/: advanced_search.py  async_employee.py  employee.py
config/: jwt_tokens.json  organization_configs.json
docs/: API_REFERENCE_EN.md  DEMO_GUIDE.md  DEPENDENCIES_JUSTIFICATION.md  GETTING_STARTED.md  JWT_AUTHENTICATION_GUIDE.md  JWT_QUICK_REFERENCE.md  PROJECT_IMPROVEMENTS_REPORT.md  PROJECT_ORGANIZATION.md  QUICK_START_EN.md
docs/deployment/: DEPLOYMENT_EN.md
scripts/: README.md  create_tables.py  generate_jwt_token.py  generate_token.py  init_async_db.py  run.py  run_tests.py
tests/: conftest.py  test_api.py
tests/api/: test_employee_api.py
tests/services/: test_employee_service.py
